force-app/main/default/objects/HCK_QuestionsAnswer__c/HCK_QuestionsAnswer__c.object-meta.xml
<CustomObject>
    <label>HCK_QuestionsAnswer</label>
    <nameField>
        <displayFormat>HCK_Q&amp;A-{00000}</displayFormat>
        <label>HCK_QuestionsAnswer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HCK_QuestionsAnswers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>