force-app/main/default/objects/HCK_QuestionsAnswer__c/fields/HCK_Answer__c.field-meta.xml
<CustomField>
    <fullName>HCK_Answer__c</fullName>
    <label>HCK_Answer</label>
    <referenceTo>HCK_Answer__c</referenceTo>
    <relationshipLabel>HCK_QuestionsAnswers</relationshipLabel>
    <relationshipName>HCK_QuestionsAnswers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>