force-app/main/default/objects/HCK_QuestionsAnswer__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this answer correct ?</description>
    <label>Is Correct?</label>
    <type>Checkbox</type>
</CustomField>