force-app/main/default/objects/HCK_QuestionsAnswer__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>HCK_QuestionsAnswers</relationshipLabel>
    <relationshipName>HCK_QuestionsAnswers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>